[gd_scene load_steps=17 format=3 uid="uid://bi4vcv41hoy0q"]

[ext_resource type="Script" path="res://heroes/#base/HeroBase.gd" id="1_sq7xi"]
[ext_resource type="Material" uid="uid://tdbycpp30oep" path="res://graphics/materials/gold.tres" id="2_5pqg1"]
[ext_resource type="PackedScene" uid="uid://d20x3gfrmoext" path="res://comps/scenes/health_component.tscn" id="2_w8m13"]
[ext_resource type="PackedScene" uid="uid://dvaipocthe14r" path="res://comps/scenes/damage_mgr_component.tscn" id="3_mautj"]
[ext_resource type="PackedScene" uid="uid://cwhihpdu5pw3h" path="res://comps/scenes/gui_component.tscn" id="5_vnvt4"]
[ext_resource type="PackedScene" uid="uid://bfx1wxpmwujue" path="res://comps/scenes/sanity_component.tscn" id="6_0472j"]
[ext_resource type="PackedScene" uid="uid://bid6uhyybfx4x" path="res://comps/scenes/navigation_component.tscn" id="7_r5h44"]
[ext_resource type="PackedScene" uid="uid://cx88lgs15cpdr" path="res://comps/scenes/effects_component.tscn" id="8_xgmrb"]
[ext_resource type="PackedScene" uid="uid://boihyru5nyiju" path="res://comps/scenes/xp_component.tscn" id="9_3sdxv"]
[ext_resource type="PackedScene" uid="uid://ek5hq7khlfdc" path="res://comps/scenes/battack_component.tscn" id="9_lc4gq"]
[ext_resource type="Script" path="res://comps/scripts/StateMachineComponent.gd" id="11_dngpm"]
[ext_resource type="Script" path="res://scripts/states/HeroAliveState.gd" id="12_mnhv5"]
[ext_resource type="Script" path="res://scripts/states/HeroDeadState.gd" id="13_dboos"]
[ext_resource type="Script" path="res://comps/scripts/TeamComponent.gd" id="14_ukvv4"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_vra3a"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_vhjqo"]
material = ExtResource("2_5pqg1")

[node name="SacoDePancada" type="CharacterBody3D" node_paths=PackedStringArray("dmgr", "xp_comp", "batk_comp", "fx_comp", "state_machine_comp", "team_comp")]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_sq7xi")
dmgr = NodePath("comps/DamageMgrComponent")
xp_comp = NodePath("comps/XPComponent")
batk_comp = NodePath("comps/BAttackComponent")
fx_comp = NodePath("comps/EffectsComponent")
state_machine_comp = NodePath("comps/StateMachineComponent")
team_comp = NodePath("comps/TeamComponent")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_vra3a")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_vhjqo")

[node name="comps" type="Node3D" parent="."]

[node name="HealthComponent" parent="comps" node_paths=PackedStringArray("hero") instance=ExtResource("2_w8m13")]
hero = NodePath("../..")

[node name="DamageMgrComponent" parent="comps" node_paths=PackedStringArray("health_component", "effects_component") instance=ExtResource("3_mautj")]
health_component = NodePath("../HealthComponent")
effects_component = NodePath("../EffectsComponent")

[node name="GUIComponent" parent="comps" node_paths=PackedStringArray("health_comp", "sanity_comp", "fx_comp", "team_comp") instance=ExtResource("5_vnvt4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.33255, 0)
health_comp = NodePath("../HealthComponent")
sanity_comp = NodePath("../SanityComponent")
fx_comp = NodePath("../EffectsComponent")
team_comp = NodePath("../TeamComponent")

[node name="SanityComponent" parent="comps" node_paths=PackedStringArray("health_comp") instance=ExtResource("6_0472j")]
health_comp = NodePath("../HealthComponent")

[node name="NavigationComponent" parent="comps" node_paths=PackedStringArray("hero") instance=ExtResource("7_r5h44")]
speed = 300
desired_distance = 1.2
hero = NodePath("../..")

[node name="EffectsComponent" parent="comps" node_paths=PackedStringArray("battack_comp", "nav_comp", "health_comp", "sanity_comp", "hero") instance=ExtResource("8_xgmrb")]
battack_comp = NodePath("../BAttackComponent")
nav_comp = NodePath("../NavigationComponent")
health_comp = NodePath("../HealthComponent")
sanity_comp = NodePath("../SanityComponent")
hero = NodePath("../..")

[node name="XPComponent" parent="comps" node_paths=PackedStringArray("dead_state", "hero") instance=ExtResource("9_3sdxv")]
dead_state = NodePath("../StateMachineComponent/HeroDeadState")
hero = NodePath("../..")

[node name="BAttackComponent" parent="comps" node_paths=PackedStringArray("nav_comp", "hero") instance=ExtResource("9_lc4gq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
atk_damage = 15.0
atk_cooldown = 0.5
range = 5.0
nav_comp = NodePath("../NavigationComponent")
hero = NodePath("../..")

[node name="StateMachineComponent" type="Node" parent="comps" node_paths=PackedStringArray("initial_state")]
script = ExtResource("11_dngpm")
initial_state = NodePath("HeroAliveState")

[node name="HeroAliveState" type="Node" parent="comps/StateMachineComponent" node_paths=PackedStringArray("nav", "battack", "xp_comp", "hero", "health_comp")]
script = ExtResource("12_mnhv5")
nav = NodePath("../../NavigationComponent")
battack = NodePath("../../BAttackComponent")
xp_comp = NodePath("../../XPComponent")
hero = NodePath("../../..")
health_comp = NodePath("../../HealthComponent")
control = false

[node name="HeroDeadState" type="Node" parent="comps/StateMachineComponent" node_paths=PackedStringArray("hero")]
script = ExtResource("13_dboos")
hero = NodePath("../../..")

[node name="TeamComponent" type="Node" parent="comps" node_paths=PackedStringArray("hero")]
script = ExtResource("14_ukvv4")
team = 1
hero = NodePath("../..")
